--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,14 @@
 }
 
 .progress {
-    position: absolute;
+    /* position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    margin: auto;
+    margin: auto; */
     transform: rotate(-90deg);
+    border: 1px solid red;
 }
 
 .progress-circle {
