--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,23 @@
+@import './_fonts.css';
+@import './_variables.css';
+
+
 * {
     margin:0;
     Padding:0;
+}
 
+body {
+    font-family:var(--font-1);
+    /* font-family:var(--font-2); */
+    /* font-family:var(--font-3); */
 }
 
 .progress {
-    /* position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto; */
     transform: rotate(-90deg);
     border: 1px solid red;
 }
 
 .progress-circle {
-    /* stroke-dasharray: 189; 
-    stroke-dashoffset:189; */
+
 }
