--- a/public/css/_typography.css
+++ b/public/css/_typography.css
@@ -19,6 +19,13 @@ h1 {
     color: var(--color-gray);
 }
 
+h1.heading {
+    font-size: 32px;
+    text-align: center;
+    letter-spacing: unset;
+    text-transform: lowercase;
+}
+
 h2 {
     font-size: 100px;
     line-height: 34px;
