--- a/public/css/_variables.css
+++ b/public/css/_variables.css
@@ -3,6 +3,7 @@
     --color-blue:#70F3F8;
     --color-purple:#D881F8;
     --color-gray:#D7E0FF;
+    --color-dark-blue:#1E213F;
 
     --font-1:'Kumbh Sans',sans serif;
     --font-2:'Roboto Slab',sans serif;
