--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,28 +17,63 @@ body {
     background-color: #1E213F;
 }
 
-.progress {
-    transform: rotate(-90deg);
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* border: 1px solid red; */
-    width: 100%;
-    height: 100%;
-    stroke: var(--color-red);
+button {
+    outline: none;
+    background-color: transparent;
+    border: none;
+}
+
+
+/** Timer Settings component*/
+.timer-states {
+    width:373px;
+    margin: 0 auto;
+    display: flex;
+    background-color: #161932;
+    border-radius: 100px;
+    padding: 10px;
+}
+
+.timer-states .state  {
+    outline: none;
+    border: none;
+    flex: 1;
+    text-align: center;
+    padding: 15px 16px;
+    background-color: transparent;
+    color: #D7E0FF;
+}
+
+.timer-states .state.current {
+    background-color: var(--color-red);
+    color:var(--color-dark-blue);
+    border-radius: 100px;
+}
+
+.timer-states .state:not(.current) {
+    opacity: 0.5;
+}
+
+.timer-states .state.current:hover {
+    cursor: default;
+}
+
+
+.timer-states .state:not(.current):hover {
+    opacity: 1;
+    cursor: pointer;
 }
 
 
 
-
-
+/** The container for the counter  */
 .counter-container {
     width: 366px;
     height: 366px;
     border-radius: 50%;
     background-color: #161932;
     position: relative;
-    margin: 50px auto 0;
+    margin: 50px auto 22px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,5 +91,36 @@ body {
     z-index: -1;
     background: linear-gradient(135deg, #0E112A, #2E325A);
     border-radius: 50%;
-    
+}
+
+/** Circle progress  */
+.progress {
+    transform: rotate(-90deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 100%;
+    stroke: var(--color-red);
+}
+
+
+/** Settings*/
+button.settings-btn {
+    margin-top: 60px;
+    display: inline-block;
+    width: 27px;
+    height: 28px;
+    fill:#D7E0FF;
+    opacity: 0.5;
+}
+
+button.settings-btn:hover {
+    cursor: pointer;
+}
+
+button.settings-btn:hover {
+    fill:#D7E0FF;
+    opacity: 1;
 }
