--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,10 +42,11 @@ button {
     padding: 15px 16px;
     background-color: transparent;
     color: #D7E0FF;
+    font-weight: 700;    
 }
 
 .timer-states .state.current {
-    background-color: var(--color-red);
+    background-color: var(--primary-color);
     color:var(--color-dark-blue);
     border-radius: 100px;
 }
@@ -99,17 +100,24 @@ button {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
     /* border: 1px solid red; */
     width: 100%;
     height: 100%;
-    stroke: var(--color-red);
+    stroke: var(--primary-color);
 }
 
 
-/** Settings*/
+/** Settings gear*/
+.settings-btn-container {
+    text-align: center;
+    margin-top: 120px;
+}
+
 button.settings-btn {
     margin-top: 60px;
     display: inline-block;
+    margin: 0 auto;
     width: 27px;
     height: 28px;
     fill:#D7E0FF;
