created initial setup for the modal box

--- a/public/css/_typography.css
+++ b/public/css/_typography.css
@@ -20,6 +20,10 @@ button:hover {
     cursor: pointer;
 }
 
+.pause-button:hover {
+    color: var(--primary-color);
+}
+
 
 h1 {
     font-size: 100px;
