--- a/public/css/_typography.css
+++ b/public/css/_typography.css
@@ -7,11 +7,11 @@ h4,
     font-weight: 700;
 }
 
-h3, h4, .pause-button {
+h3, h4, .timer-handle-button {
     text-transform: uppercase;
 }
 
-.pause-button {
+.timer-handle-button {
     font-weight: 700;
     z-index: 2; /* Not to be covered by the SVG progress element which has a z-index of 1 */
 }
@@ -20,7 +20,7 @@ button:hover {
     cursor: pointer;
 }
 
-.pause-button:hover {
+.timer-handle-button:hover {
     color: var(--primary-color);
 }
 
@@ -44,7 +44,7 @@ h2 {
     line-height: 34px;
 }
 
-h3, .pause-button {
+h3, .timer-handle-button {
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 15px;
