--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ button {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
+    
 }
 
 .counter-container::after {
@@ -105,6 +105,10 @@ button {
     stroke: var(--primary-color);
 }
 
+.progress .progress-circle {
+    transition: stroke-dashoffset 0.3s linear;
+    /* transition: stroke-dashoffset 1s linear; */
+}
 
 /** Settings gear*/
 .settings-btn-container {
