--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,8 @@ button {
     border: none;
     flex: 1;
     text-align: center;
-    padding: 15px 16px;
+    padding: 16px;
+    font-size: 13px;
     background-color: transparent;
     color: #D7E0FF;
     font-weight: 700;    
