--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,7 @@ button {
     z-index: -1;
     background: linear-gradient(135deg, #0E112A, #2E325A);
     border-radius: 50%;
+    filter: drop-shadow(-50px -50px 100px #272C5A) drop-shadow(50px 50px 100px #121530);
 }
 
 /** Circle progress  */
