--- a/public/css/_layout.css
+++ b/public/css/_layout.css
@@ -93,7 +93,7 @@ button {
     z-index: -1;
     background: linear-gradient(135deg, #0E112A, #2E325A);
     border-radius: 50%;
-    /* filter: drop-shadow(-50px -50px 100px #272C5A) drop-shadow(50px 50px 100px #121530); */
+    filter: drop-shadow(-50px -50px 100px #272C5A) drop-shadow(50px 50px 100px #121530); /* slows down the page DOM for some reason*/
 }
 
 /** Circle progress  */
